--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,4 +1,3 @@
-/* Ensure full height layout for sticky footer */
 html,
 body {
   height: 100%;
@@ -12,19 +11,16 @@ body {
 }
 
 .site-content {
-  flex: 1; /* Grow to fill remaining space */
+  flex: 1;
 }
 
 footer {
   flex-shrink: 0;
 }
 
-/* Optional styles */
 .error-text {
   color: red;
   font-size: 0.8rem;
-  margin-top: -10px;
-  margin-bottom: 10px;
   display: none;
 }
 
